# hello_fast_api

./: .gitignore  main.py  pyproject.toml
src/: app.py  db.py  media.py
