[project]
name = "hello-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "fastapi[standard]>=0.118.0",
    "imagekitio>=5.2.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.37.0",
]
